2008-09-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Postrelease version bump to 2.15.5.

2008-09-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	Update for 2.15.4.

2008-09-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/clearlooks_theme_main.c:
	Use the G_DEFINE_DYNAMIC_TYPE macro provided by GLib.
	Bug #549830 Patch by Christian Dywan.

2008-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Inreased menuitem separator spacing from 5 to 7

2008-08-20  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix the separator height, which was broken by the last commit.

2008-08-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Rework the gtkrcs so that all clearlooks based gtkrcs match better.

2008-08-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Remove useless AM_PROG_CC_STDC. Thanks for Werner Pantke.

2008-08-18  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Increase version to 2.15.4.

2008-08-18  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	Update for 2.15.3 release.

2008-08-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Prerelease version bump to 2.15.3.

2008-08-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	* themes/Industrial/gtk-2.0/gtkrc:
	Add gecko's entry workaround style property to the gtkrcs.

2008-08-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (real_draw_box):
	Fill in the entries background. However, only fill it if the
	transparent-bg-hint has not been set.

2008-08-15  Benjamin Berg  <benjamin@sipsolutions.net>
