@@ -1,3 +1,9 @@
+2008-09-05  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_draw.c:
+	(clearlooks_draw_spinbutton):
+	Made the horizontal line in the spinbutton smaller.
+
 2008-09-02  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* configure.ac:
